// Licensed to Apache Software Foundation (ASF) under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Apache Software Foundation (ASF) licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package banyandb.model.v2;

option java_package = "org.apache.skywalking.banyandb.model.v2";
option go_package = "github.com/apache/skywalking-banyandb/api/proto/banyandb/model/v2";

import "google/protobuf/struct.proto";

message Str {
    string value = 1;
}

message Int {
    int64 value = 1;
}

message StrArray {
    repeated string value = 1;
}

message IntArray {
    repeated int64 value = 1;
}

message TagValue {
    oneof value {
        google.protobuf.NullValue null = 1;
        Str str = 2;
        StrArray str_array = 3;
        Int int = 4;
        IntArray int_array = 5;
        bytes binary_data = 6;
    }
}
